src/styles/components/brand/_brand.scss
.brand__logo {
    position: relative;
    z-index: $z-index-1;
    margin-bottom: 20px;
    text-align: center;
    img {
        height: 100%;
        max-height: 100px;
        width: 60%;
    }
    @media #{$medium-up} {
        margin: 0 0 40px;
    }

}

.brand__body {
    margin: 0 auto;
    max-width: 1024px;

    .teaser__icon {
        display: none;
    }

    @media #{$small-only} {
        .ad--section-mrec {
            margin-bottom: 20px;
            @include grid-column(12);
        }
    }
}

.brand__body--fullwidth-ad {
    @media #{$large-up} {
        margin-bottom: 40px;
        background: $color-grey-lighter;
        padding: 13px 0 0 0;
    }
}

.brand__body--bottom {
    padding-top: 0;
    margin-top: 10px;

    @media #{$large-up} {
        padding-left: $column-gutter / 2;
        padding-right: $column-gutter / 2;
    }

    .fixed-column {
        @include grid-column(4);
    }
}

.ad--section-mrec {
    margin-bottom: 25px;
}

.brand__body--bottom, .brand__body {
    .fixed-column {
        @include grid-column(4);
    }
}

.brand-section {
    @include column-extra-side-gutter;

    .teaser__title {
        @media #{$medium-up} {
            @include type-small-teaser-title;
        }

        @media #{$xlarge-up} {
            @include type-teaser-title;
        }
    }

    .tag-separator,
    .tag-secondary {
        display: none;
        @media #{$xlarge-up} {
            display: inline;
        }
    }

    .brand-section--top-teasers {
        @media #{$small-only} {
            @include grid-column($collapse: true);
        }

        @media #{$large-up} {
            border-right: 1px solid $color-section-separator;
            margin-bottom: 35px;

            .teaser__content {
                padding-top: 20px;
            }
        }

        .ad {
            @include grid-column(6);

            @media #{$small-only} {
                @include grid-column($columns: 12, $collapse: true);
            }
        }

        > .teaser {

            @media #{$small-only} {
                &:nth-of-type(1) {
                    .teaser__content {
                        padding: 0 20px;
                    }
                    .teaser__summary {
                        margin-bottom: 0;
                    }

                    margin-bottom: 20px;
                }
            }

            @media #{$medium-only} {

                &:not(:nth-of-type(1)) {
                    @include grid-column(6);
                }

                &:nth-of-type(3),
                &:nth-of-type(5),
                &:nth-of-type(7) {
                    clear: both;
                    padding-left: 0;
                }

                &:nth-of-type(2),
                &:nth-of-type(4),
                &:nth-of-type(6) {
                    padding-right: 0;
                }
            }

            @media #{$large-up} {
                &:nth-of-type(1) {
                    @include teaser-small-hero;
                    margin-bottom: 50px;

                    .teaser__summary {
                        display: none;
                    }
                    .teaser__tags {
                        margin: 0;
                    }
                }

                &:not(:nth-of-type(1)) {
                    @include grid-column(6)
                }

                &:nth-of-type(3),
                &:nth-of-type(5),
                &:nth-of-type(7) {
                    padding-right: 0;
                }

                &:nth-of-type(2),
                &:nth-of-type(4),
                &:nth-of-type(6) {
                    clear: both;
                    padding-left: 0;
                }
            }
        }
    }
}

.brand-section--top {

    .fixed-column {
        @include grid-column(4);
    }

    .teaser--hero {
        @include teaser-show-summary-source;

        .teaser__source {
            display: none;
        }

        > .teaser {

            &:not(:nth-of-type(1)) {

                .teaser__source,
                .teaser__summary {
                    display: none;
                }
            }

            &:nth-of-type(n+2) {
                @include grid-column(12);
            }

            @media #{$small-only} {
                @include columns-half-gutter(even);

                &:nth-of-type(1) {
                    @include grid-column(12);
                    padding: 0;
                }
            }

            @media #{$medium-only} {
                &:nth-of-type(n+2) {
                    @include grid-column(6);
                    margin: {
                        left: 0;
                        right: 0;
                    }
                }

                &:nth-of-type(1) {
                    clear: both;
                    margin-bottom: 20px;
                    margin-left: -$column-gutter / 2;
                    margin-right: -$column-gutter / 2;

                    .teaser__title {
                        @include type-hero-title;
                    }

                    .tag-separator,
                    .tag-secondary {
                        display: inline;
                    }

                    .teaser__source {
                        display: none;
                    }

                    .teaser__summary {
                        display: block;
                    }

                }

                &:nth-of-type(2),
                &:nth-of-type(4),
                &:nth-of-type(6) {
                    clear: both;
                }
            }

            @media #{$medium-up} {
                @include teaser-tag-over-img;
                @include teaser-icon-centered-small;
            }

            @media #{$large-only} {

                &:nth-of-type(n+2) {
                    @include grid-column(4);
                }

                &:nth-of-type(1) {
                    @include grid-column(8);

                    .teaser__title {
                        @include type-small-teaser-title;
                    }
                }

                &:nth-last-of-type(-n+2) {
                    @include grid-column(6);
                }

                &:nth-of-type(4) {
                    clear: both;
                }
            }

            @media #{$large-up} {

                &:nth-of-type(1) {
                    @include teaser-small-hero;
                    margin-bottom: 40px;

                    .teaser__summary,
                    .teaser__source {
                        display: none;
                    }
                }
            }

            @media #{$large-up} {
                @include grid-column(6);
                margin-bottom: $column-gutter * 2;

                &:nth-of-type(n+1) {
                    @include grid-column(6);
                    @include teaser-small-hero;

                    display: block;

                    .teaser__title {
                        margin-bottom: 20px;
                    }

                    .teaser__content {
                        position: relative;
                    }

                    .teaser__summary,
                    .teaser__source {
                        display: none;
                    }
                }
            }
        }
    }
}

.brand-section--repeat {

    .teaser {

        &--hero {
            @include teaser-show-summary-source;
        }

        @media #{$small-only} {
            padding: 0 15px;

            &--img-top {
                &:nth-of-type(n) {
                    @include columns-half-gutter(even);
                }
            }
        }

        @media #{$medium-only} {
            @include grid-column(6);



            &--hero {
                margin-left: -$column-gutter / 2;
                margin-right: -$column-gutter / 2;

                .tag-separator,
                .tag-secondary {
                    display: inline;
                }

                .teaser__title {
                    @include type-hero-title;
                }
            }

            &--img-left {
                .teaser__summary,
                .teaser__source {
                    display: none;
                }
            }

        }

        @media #{$medium-up} {
            @include teaser-tag-over-img;
            @include teaser-icon-centered-small;
        }

        @media #{$large-up} {
            @include teaser-icon-centered;

            &:nth-of-type(n+7) {
                @include grid-column(6);
            }

            .teaser__summary {
                display: block;
            }

            &:nth-of-type(5) {
                clear: both;
            }

            &--img-left {
                width: 100%;
            }

            .teaser__title {
                margin-bottom: 5px;
            }

            .teaser__content {
                text-align: left;
                position: absolute;
                margin-top: -10px;
                padding: 0 26px 25px;
            }

            .teaser__tags {
                @include teaser-tag-over-img
                margin-bottom: 5px;
                margin-top: 0px;
            }

            .teaser__source {
                display: none;
            }

        }
    }

    .ad--section-mrec {
        @media #{$medium-up} {
            @include grid-column(6);
        }

        @media #{$large-only} {
            clear: both;
        }

        @media #{$large-up} {
            @include grid-column(4);
        }

        @media #{$xlarge-up} {
            @include grid-column(3);
        }
    }
}

.brand-section--bottom-teasers {

     @media #{$large-up} {
         border-right: 1px solid $color-section-separator;
         margin-bottom: 40px;
     }

}

